src/assets/styles/pages/learn/_okp4.scss
.okp4 {
  min-height: 100vh;
  padding-top: 181px;

  @include media-bp-down(lg) {
    padding-top: 70px;
  }

  .learn-okp4 {
    margin: 0 auto;
  }

  .okp4__link {
    margin: 0 5px;
    pointer-events: none;
    opacity: 80%;

    @include media-bp-up(lg) {
      pointer-events: unset;
      border-bottom: 1px solid;
    }
  }

  .okp4__bold {
    margin: 0 5px;
    font-weight: 700;

    @include media-bp-up(lg) {
      font-weight: unset;
    }
  }

  .okp4__button {
    display: none;

    @include media-bp-down(lg) {
      display: block;
      align-items: center;
      column-gap: 10px;
      background: linear-gradient(78.68deg, #006796 49.23%, #00b6b7 114.06%),
        #00b6b7;
      border-radius: 10px;
      padding: 18px 30px;
      text-align: center;
      font-weight: 600;
      font-size: 16px;
      line-height: 19px;
      width: 100%;
      max-width: 335px;
      margin: 0 auto;

      &:hover {
        background: url("/images/grain.webp"),
          linear-gradient(222.68deg, #f9f9f9 13.75%, #d3defa 76.51%);
        color: $textblue;
      }
    }
  }

  .okp4__presentation_image--container {
    position: absolute;
    bottom: 0;
    @include media-bp-down(lg) {
      display: none;
    }
    @media screen and (min-width: 1920px) {
      display: none;
    }
    z-index: -1;
    width: 100%;
    mix-blend-mode: luminosity;
    opacity: 0.5;
  }
  .okp4__presentation_image {
    float: right;
    max-width: 721px;
    mix-blend-mode: luminosity;
    border-radius: 0px;
  }

  .wrapper {
    position: relative;
    padding: 0;
    max-width: 1920px;
  }

  .content__wrapper {
    max-width: 1264px;
    @include media-bp-down(xxl) {
      padding: 0 30px;
    }
    @include media-bp-down(lg) {
      padding: 0 15px;
    }
    margin: auto;
  }

  .okp4__text__primary {
    font-size: 25px;
    line-height: 1.5;
    @include media-bp-down(lg) {
      text-align: center;
      font-size: 20px;
    }
  }

  .okp4__text__secondary {
    color: $white-80;
    font-size: 20px;
    line-height: 1.8;
    font-weight: 400;
    @include media-bp-down(lg) {
      text-align: center;
      line-height: 1.5;
      font-size: 18px;
    }
  }

  .okp4__text__emphase {
    margin: auto;
    color: #15233d;
    line-height: 1.5;
    height: fit-content;
    padding: 20px 30px;
    border-radius: 20px;
    background: url("/images/grain.webp"),
      linear-gradient(222.68deg, #f9f9f9 13.75%, #d3defa 76.51%);
    background-repeat: repeat;
    background-size: contain;
    a {
      color: #15233d;
      font-weight: 700;
    }

    @include media-bp-down(lg) {
      padding: 24px;
    }

    @include media-bp-up(lg) {
      p {
        font-size: 20px;
      }
    }
  }

  .okp4__image {
    margin: auto;
    padding: 30px;
    animation: floating-image 8s linear infinite;
  }

  .imgWrapper {
    min-height: 100%;
    display: block;
  }

  .okp4__presentation {
    padding-bottom: 95px;
    position: relative;
    margin-top: 122px;

    @include media-bp-down(lg) {
      margin-top: 46px;
      padding-bottom: 60px;
    }

    .okp4__title {
      text-align: center;
      margin: 0 auto 90px;
      @include media-bp-between(lg, xxl) {
        max-width: 1025px;
      }
      @include media-bp-down(lg) {
        margin: 0 auto 32px;
      }
    }

    .okp4__presentation__text {
      display: grid;
      grid-template-columns: 46.86fr 53.14fr;
      @include media-bp-up(lg) {
        margin: 0 30px;
        column-gap: 140px;
      }
      @include media-bp-down(xxl) {
        column-gap: 70px;
      }

      @include media-bp-down(lg) {
        grid-template-columns: auto;
        row-gap: 20px;
        text-align: center;
        padding: 0 15px;
      }

      .okp4__text__secondary {
        font-size: 20px;
        @include media-bp-up(lg) {
          max-width: 616px;
        }
      }
    }

    .okp4__presentation__introduction {
      font-weight: 700;
      @include media-bp-up(lg) {
        max-width: 508px;
        justify-self: end;
        font-weight: 600;
      }
    }
  }

  .okp4__section {
    position: relative;
    @include media-bp-up(lg) {
      margin: 0 30px;
    }

    .okp4__section__content {
      background: $darkblue;
      border-radius: 40px;
      @include media-bp-down(lg) {
        border-radius: 20px;
      }
    }

    .wrapper {
      position: relative;
    }

    .okp4__section__description {
      max-width: 616px;
      @include media-bp-up(lg) {
        margin: 126px 0;
        margin-right: 70px;
      }

      @include media-bp-down(lg) {
        text-align: center;
        padding: 32px 20px;
        margin: 0 auto;
      }

      p:last-of-type {
        @include media-bp-down(lg) {
          margin-bottom: 32px;
        }
      }

      .okp4__title {
        font-weight: 700;
        @include media-bp-down(lg) {
          margin-bottom: 24px;
        }
      }

      .okp4__text-part {
        @include media-bp-up(lg) {
          margin-top: 30px;
        }

        p {
          @extend .okp4__text__secondary;
        }

        b {
          font-weight: 700;
        }
      }
    }
  }

  .okp4__data-sharing {
    @include media-bp-up(lg) {
      max-height: 940px;
      display: grid;
      grid-template-columns: 46.86fr 53.14fr;
      column-gap: 140px;
    }
    @include media-bp-down(xxl) {
      column-gap: 70px;
    }
    overflow: hidden;
    background: $darkblue;
    background-repeat: repeat;
    background-size: contain;
    border-radius: 40px;

    @include media-bp-down(lg) {
      grid-template: revert;
      border-radius: 20px;
    }
  }

  .okp4__know {
    margin: 60px auto;
    @include media-bp-up(lg) {
      margin: 120px 0;
    }

    .okp4__know__title {
      text-align: center;
      margin: auto;
    }

    .okp4__know__content {
      margin-top: 60px;

      display: grid;
      grid-template-areas:
        "introduction description"
        "presentation image";
      column-gap: 140px;
      @include media-bp-down(xxl) {
        column-gap: 70px;
      }

      @include media-bp-down(lg) {
        margin-top: 40px;
        grid-template-areas:
          "introduction"
          "presentation"
          "description"
          "image";
      }

      .okp4__know__introduction {
        grid-area: introduction;
        font-weight: 700;
        @include media-bp-up(lg) {
          max-width: 400px;
        }
      }

      .okp4__know__description {
        grid-area: description;
        p {
          @extend .okp4__text__secondary;
        }
      }

      .okp4__know__know {
        grid-area: presentation;
        margin: 40px auto;
        @include media-bp-up(lg) {
          max-width: 400px;
          margin: 60px 0 12px;
        }
      }

      .okp4__know__image {
        grid-area: image;
        max-width: 477px;
        max-height: 252px;
      }
    }
  }

  .okp4__section--cosmos {
    margin-bottom: 120px;
    @include media-bp-down(lg) {
      margin-bottom: 60px;
    }
  }

  .okp4__cosmos {
    padding: 100px 0;
    @include media-bp-down(lg) {
      padding: 32px 0;
      margin-bottom: 60px;
    }

    .okp4__cosmos__title {
      text-align: center;
      margin-bottom: 40px;
    }

    .okp4__cosmos__content {
      @include media-bp-up(lg) {
        margin: 30px auto 0;
      }
      display: grid;
      grid-template-areas:
        "introduction introduction"
        "image link"
        "image description"
        "button button";
      column-gap: 120px;
      row-gap: 34px;

      @include media-bp-down(lg) {
        grid-template-areas:
          "introduction"
          "link"
          "description"
          "image"
          "button";
        row-gap: 40px;
      }

      .okp4__cosmos__link {
        grid-area: link;
        @include media-bp-up(lg) {
          margin-top: 21px;
        }
      }

      .okp4__cosmos__introduction {
        grid-area: introduction;
        text-align: center;
        font-weight: 600;
        @include media-bp-up(lg) {
          margin: 0 108px;
        }
      }

      .okp4__cosmos__description {
        grid-area: description;

        p {
          @extend .okp4__text__secondary;
        }
      }

      .okp4__cosmos__image {
        grid-area: image;
        max-width: 488px;
      }
    }
  }
}

